sheet.css
body {
	background-color: #333;
	font-family: "BulgariaModernaV3";
}

span {
	display: inline-block;
	vertical-align: top;
}

@font-face {
    font-family: "BulgariaModernaV3";
    src:url("font/BulgariaModernaV3.ttf.woff") format("woff"),
        url("font/BulgariaModernaV3.ttf.svg#BulgariaModernaV3") format("svg"),
        url("font/BulgariaModernaV3.ttf.eot"),
        url("font/BulgariaModernaV3.ttf.eot?#iefix") format("embedded-opentype"); 
    font-weight: normal;
    font-style: normal;
}

.page {
	background-color: white;
	width: 6.5in;
	height: 9in;
	margin: auto;
	padding: 1in;
	overflow: hidden;
}

.page + .page {
	border-top: 1px solid black;
}

@media print {
	.page + .page {
		border: none;
	}
}

#char-info {
	width: fit-content;
	margin: auto;
	margin-bottom: 10px;
}

.stat-label {
	font-family: "BulgariaModernaV3";
	text-align: center;
	width: 81.2756px;
}

.info-label {
	color: #666;
	font-size: 10px;
	position: absolute;
	top: -4px;
	left: 4px;
	background: white;
	height: 8px;
	line-height: 8px;
	white-space: nowrap;
	padding: 0 2px;
}

.info-label.important {
	color: black;
}

.info-label.right {
	left: unset;
	right: 8px;
	top: unset;
	bottom: -6px;
}

.info-label.blank {
	width: 50px;
	max-width: 70%;
	border-bottom: 1px solid #ccc;
}

.wrapper {
	border: 1px solid #666;
	display: inline-block;
	width: 50px;
	position: relative;
	margin-left: -1px;
	height: 22px;
	line-height: 23px;
	vertical-align: top;
	transform: skewX(20deg);
	padding-left: 5px;
}

.wrapper > * {
	transform: skewX(-25deg);
}

.wrapper.gap {
	margin-left: 20px;
}

.wrapper.small {
	width: 35px;
}

.wrapper.x-small {
	width: 20px;
}

.wrapper.small .info-label.right {
	right: 3px;
}

.wrapper.tall {
	height: 40px;
	line-height: 41px;
}

.wrapper.medium {
	height: 30px;
	line-height: 31px;
}

.x-wide {
	width: 265px;
}

.wide {
	width: 75px;
}

.wider {
	width: 225px;
}

#name-wrapper {
	width: 250px;
}

.stat-row {
	height: 25px;
	margin-bottom: 4px;
}

.stat-row:first-of-type {
	height: 20px;
	margin-bottom: 0;
}

.stat-row-type {
	display: inline-block;
	width: 60px;
}

.modifier {
	border: 1px solid #666;
	width: 22px;
	height: 26px;
	position: absolute;
	left: 30px;
	top: -2.5px;
	text-align: center;
	background: #eee;
	line-height: 18px;
}

.save {
	position: absolute;
	top: -1px;
	right: 8px;
}

#health-block {
	width: 320px;
}

.health-row {
	display: block;
	height: 25px;
	margin: 10px auto 0 auto;
	width: 300px;
}

.divider {
	height: 100%;
	width: 0;
	border-left: 1px solid #666;
	transform: unset;
	position: absolute;
}

#values-block {
	margin-top: 10px;
	margin-bottom: 10px;
}

#levels-block {
	margin-top: 10px;
	width: 407px;
	position: relative;
}

.level-number {
	position: absolute;
	left: -20px;
	line-height: 41px;
}

.level-row {
	width: 100%;
	margin-bottom: 5px;
}

#class-features {
	display: flex;
	width: calc(100% - 17px);
	margin-bottom: 5px;
}

#class-features > .wrapper {
	flex: 1;
}

.spell-row {
	margin-top: -1px;
}

.column {
	width: min-content;
}

#reputation-block {
	position: relative;
	width: 200px;
	height: 200px;
}

.rep-label {
	color: #999;
	font-size: small;
}

#rep-background {
	width: 200px;
	height: 200px;
	position: absolute;
	top: 0;
	left: 0;
}

.reputation {
	position: absolute;
	text-align: center;
}

#skill-block {
	margin-top: 10px;
	margin-left: 10px;
}

.skill-row {
	display: block;
	width: 200px;
}

.skill-label {
	color: #666;
	font-size: 10px;
	background: white;
	height: 10px;
	line-height: 10px;
	white-space: nowrap;
	width: 50%;
	display: inline-block;
}

.skill-label.blank {
	border-bottom: 1px solid #ccc;
	width: 40%;
	margin-right: 10%;
}

.skill-box {
	border: 1px solid #666;
	width: 10px;
	height: 10px;
	display: inline-block;
	transform: skewX(20deg);
}

.skill-box::after {
	content: attr(data-box-label);
	transform: skewX(-25deg);
	color: #bbb;
	font-size: 10px;
	line-height: 10px;
	position: absolute;
	text-align: center;
	width: 10px;
}

.skill-box:last-of-type {
	margin-left: 5px;
	margin-right: 5px;
}

.skill-mod {
	border-bottom: 1px solid #ccc;
	display: inline-block;
	width: 20px;
	height: 13px;
	position: relative;
}

.skill-mod:not(.no-plus)::before {
	color: #999;
	content: "+";
	bottom: -1px;
	position: absolute;
}

#equipment-block {
	margin-left: 10px;
}

.equipment-row {
	width: 200px;
	margin-top: 6px;
}

.equipment-row.no-space {
	margin-top: -1px;
}

.equipment-row .divider {
	right: 15px;
}

.equipment-row:last-of-type {
	display: flex;
}

.equipment-row:last-of-type > .wrapper {
	flex: 1;
}

#magic-block {
	margin-top: 10px;
	margin-left: 10px;
	width: 200px;
}

.magic-row {
	margin-bottom: 10px;
}

#race-block {
	margin-left: 10px;
}

.race-row {
	margin-top: 6px;
	display: block;
	width: 200px;
}

.label {
	width: 100%;
	text-align: center;
}

.attack-row {
	display: flex;
	width: 200px;
	margin-top: -1px;
}

.attack-row:nth-of-type(2) {
	margin-left: 8px;
}

.attack-row:nth-of-type(3) {
	margin-left: 16.5px;
}

.attack-info {
	flex: 1;
}

.attack-data {
	margin-top: 7px;
}

